fix: media querries alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -46,10 +46,14 @@ $gray-text: #2c2c2c;
       @include flex(center, center, column);
       flex: 1 1 20rem;
       margin-top: 2rem;
+      height: 2rem;
+      align-items: center;
     }
     ul {
+      @include flex(center, center, row);
       flex: 1 1 60rem;
-      margin: 2rem 0rem;
+      margin: 12rem 0rem;
+      justify-content: center;
     }
   }
   .intro-text {
